sass/main.scss
//Imports
@import '_vars';

html {
    box-sizing: border-box;
}
body{
    background-color:$body-bg-color;
    padding: 0;
    margin: 0;
    font-family: $main-font; 
    min-height: 100vh;
    overflow-x: hidden;
}
a{
  text-decoration: none;
}
p{
  padding: 0;
    margin: 0;
}
.hidden {
    display: none;
}

.wrapper {
    display: grid;
    grid-gap: 20px;
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto -142px;
}
.bodyScroll {
  height: 100vh;
  overflow-x:hidden;
  overflow-y: scroll;
  scroll-behavior: smooth;
}
// ________________________________Landing Pg
#bg-img {
    background: url('../images/bg_mobile.jpg');
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
    height: 100vh;
    // width: 100%;
}
#home-container {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
  
}

// ___________________________Nav Styles
#main-nav a {
    text-decoration: none;
    color: #232323;
    // display: flex;
  // justify-content: center;
    transition: $main-transition;
    
}

#main-nav a:hover
{
  color:$primary-color;
  padding-left: 5px;
}
#menuToggle
{
  display: block;
  // position: relative;
  position: fixed;
  top: 50px;
  left: 50px;
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
}

#menuToggle input
{
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  left: -5px;
  cursor: pointer;
  opacity: 0; /* hide this */
  z-index: 2; /* and place it over the hamburger */
  -webkit-touch-callout: none;
}
.hamburger
{
  display: block;
  width: 33px;
  height: 3px;
  margin-bottom: 5px;
  position: relative;
  background: $primary-color;
  border-radius: 1px;
  z-index: 1;
  transform-origin: 4px 0px;
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              opacity 0.55s ease;
}
.line2 {
    width: 40px;  
}
.line3 {
    width: 23px;  
}
.hamburger:first-child
{
  transform-origin: 0% 0%;
}
.hamburger:nth-last-child(2)
{
  transform-origin: 0% 100%;
}
#menuToggle input:checked ~ span
{
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
}
#menuToggle input:checked ~ span:nth-last-child(3)
{
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}
#menuToggle input:checked ~ span:nth-last-child(2)
{
  transform: rotate(-45deg) translate(0, -1px) scaleX(1.3);
}
#menu
{
  position: absolute;
  width: 300px;
  margin: -100px 0 0 -50px;
  padding: 50px;
  padding-top: 125px;
  background: $bg-alpha-nav;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  /* to stop flickering of text in safari */
  transform-origin: 0% 0%;
  transform: translate(-100%, 0);
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
}
.icon {
  width: 13%;
  padding-left: 50%;
  transition: all 0.3s ease;
}

#menu li
{
  padding: 10px 0;
  font-size: 22px;
  border-bottom: 1px solid black;
  // display: flex;
  // align-items: center;
}
#menuToggle input:checked ~ ul
{
  transform: none;
}
//___________________________ Nav  styles end
//___________________________ Social Media Nav  
.social-media-nav{
  position:absolute;
  left:82%;
  top: 30%;
  li{
    list-style-type:none;
    padding: 15px;
    transition: .6s ease;
    // transition: background-color .3s ease;
    color:$primary-color;
    position:relative;
    border-radius: 5px;
  }
  
  & li:hover{
    padding-left: 30px;
    color:black;
    background-color: $bg-alpha-nav;
  }
  ul{
    position: fixed;
    overflow: hidden;
    width:100px;
  }
  // & li:nth-child(1){
  //   background: #3b5998;
  // }
  // & li:nth-child(2){
  //   background: #00aced;
  // }
  // & li:nth-child(3){
  //   background: #dd;
  // }
}

// __________________________Logo Styles
#logo-ctn {
  margin:0 auto;
  grid-column: 2 / 3;
  grid-row: 2 / 3;
  display: flex;
  flex-direction: column;
  justify-content: center;

}
#logo-ctn h1 {
  margin:0 auto;
}
.logo{
  // padding-top: 50%; 
  color: $primary-color;
  font-size: 2.5rem;
  text-shadow: $logo-shadow;
}

// _______________________________Logo Styles End

.arrow-btn-ctn {
  // margin:0 auto;
  width: 30%;
  place-self:center center;
  grid-column: 2 / 3;
  grid-row: 3 / 3;
}


// _____________________________About Us Section
#about-us {
      background: url('../images/about-bg-mobile.jpg');
      background-size:cover;
      background-repeat: no-repeat;
      background-position: center;
      height: 100vh;
       margin-top: -20px;
       display: grid;
       grid-template-columns: 0.5fr 3fr 0.5fr;
       grid-template-rows: 0.5fr 1fr 0.5fr;
      //  @include blur-effect(0.5px);
       transition: $main-transition;
}
.page-title{
  grid-column: 2 / 3;
  place-self:center center;
  padding-top: 0.5em;
  font-family: $title-font;
  font-size: 3.5rem;
  color: $body-bg-color;
  
}
.about-text{
  grid-column: 2 / 3;
  grid-row: 2 / 3;
  display:grid;
  background-color: $bg-alpha;
  padding: 1em;
  border-radius: 3px;
  p {
    color: $body-bg-color;
    place-self:center center;
  }
  a {
    place-self:center center;
    width: 20%;
  }
  .p-scrl{
    padding-top: 1em;
    padding-bottom: 1em;
    font-weight: bold;
    font-size: 1.2rem;
  }
  .paragraph{
    line-height: 1.5em;
    text-align: center;
    font-size: 1.2em;
  }
}

// _____________________________Meet the Team Section
#meet-team {
  height: 100vh;
  margin-top: -20px;
  // margin-bottom: 5%;
  display: grid;
       grid-template-columns: 0.5fr 3fr 0.5fr;
       grid-template-rows: 1fr 1fr 1fr 1fr 1fr;

       h1{
        padding-top: 1em;
        font-family: $title-font;
        font-size: 3.2rem;
        grid-column: 2 / 3;
        // grid-row: 1 / 5;
       justify-self: center;
       
       }
}
.designer{
  grid-column: 2;
  grid-row: 3;
  display: grid;
  grid-template-columns: 1fr 1fr;
  
}
  .member-name{
    grid-column: 2;
    grid-row: 1;
    margin-top: 4.5em;
     // margin-left: 1em;
    justify-self: center;

  }
  small{
    grid-column: 2;
    grid-row: 1;
    justify-self: center;
    margin-top: 7.3em;
   margin-left: 2em;
   color:$primary-color;
  }

.des-pic{
  grid-column: 1;
  justify-self: center;
  width:160px; 
}
.button{
  margin-top: 1em;
  margin-left: 1em;
  grid-column: 2;
  grid-row: 1;
  justify-self: center;
  height: 25px;
  line-height: 25px;
  width:110px;
  cursor: pointer;
  text-align: center;
  padding: 0.6em;
  font-size: 0.9em;
  border-radius: 50px;
  text-transform: uppercase;
  @include btn-gradient();
  color: white;
  white-space: nowrap;
  box-shadow: 5px 5px 20px 5px transparentize(black, .85);
  @include transition(background .3s, ease);

  &:hover{
      background: $primary-color;
      @include transform(translate(0,-5%));
  }
  &:active{
    position:relative;
    top: 5px;
  } 
}
.job-desc{
  grid-column: 2;
  grid-row: 3;
  margin-top: 10em;
}
.job-desc p{
  line-height: 1.5em;
}
.dev{
  grid-column: 2 / 3;
  grid-row: 4 / 5;
  display: grid;
  margin-top: 1.5em;
  grid-template-columns: 1fr 1fr;
}
.dev-pic{
  grid-column: 1;
  grid-row: 1;
  justify-self: center;
  width:160px;
}
.dev-job-desc{
  grid-column: 2;
  grid-row: 5;
}
// _____________________________Media Queries 

@media screen and (min-width: 750px){
  #bg-img {
      background: url('../images/bg_desktop.jpg');
      background-size:cover;
      background-repeat: no-repeat;
      background-position: center;
      height: 100vh;
  }
  .logo{
     font-size: 3.5rem;
  }
  #about-us {
    background: url('../images/about-bg-desktop.jpg');
    grid-template-columns: 0.3fr 1fr 1fr 1fr;
       grid-template-rows: 0.5fr 1fr 0.5fr;

  }
  #meet-team {
    grid-template-columns: 0.5fr 1fr 0.2fr 1fr 0.5fr;
  }
  .designer{
    grid-column: 2;
    grid-row: 2;
  }
  .dev{
    grid-column: 4;
    grid-row: 2;
    margin-top:0;
  }
  .job-desc{
    margin-top: 0;
  }
  .des-pic{
    align-self: center;
  }
  .dev-job-desc{
    grid-column: 4;
    grid-row: 3;
  }
  
}
// ______________________________LightBox
.lightbox {
    display:none;
    // @include transition(width .5s,height .5s, top .5s, background-color .5s);
    @include transition(all .5s ease);
    position: fixed;
    height: 100vh;
    width: 100%;
    z-index: 10;
    overflow: scroll;
    top: 0;
    background-color: $light-box-alpha;
    img {
      display: flex;
      justify-self: center;
      width:80%;
      height: 80%;
      margin-top:3%;
      margin-left: 5%;
      
    }
}
.close-lightbox {
	position: absolute;
	margin-left: 20px;
	top: 16px;
	font-size: 1em;
	color: $primary-color;
	cursor: pointer;
}
.show-lightbox { display: block; }

//  _____________________________________Footer
.main-footer{
  background-color: $footer-color;
  display:grid;
  position: relative;
  bottom: 0;
  margin-top:1em;
  // grid-row: 1;
  grid-template-rows: 1fr 1fr;
  padding: 1.5em;
  color: white;
}
footer, .push {
  height: 142px; /* .push must be the same height as .footer */
}
.footer-docs{
  grid-row: 1;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  margin-bottom: 1.5em;
}     
.border-right{
  border-right: 1px solid white;
  padding-right: 10%;
}

.copyright{
  grid-row: 2;
  justify-self: center;
}

